--- a/style.css
+++ b/style.css
@@ -9,3 +9,35 @@ body {
     font-family: "Jost", monospace;
     min-height: 100vh;
 }
+header {
+    font-size: 3.5rem;
+}
+header {
+    min-height: 20vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+form{
+    min-height: 10vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+form input, form button {
+    padding: 0.5rem;
+    font-size: 2rem;
+    border: none;
+    background: white;
+}
+form button{
+    color: rgb(80, 102, 56);
+    background: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+form button:hover{
+    background:rgb(80, 102, 56);
+    color:white;
+
+}
