--- a/style.css
+++ b/style.css
@@ -41,3 +41,22 @@ form button:hover{
     color:white;
 
 }
+nav{
+    height: 10vh;
+    background:rgb(80, 102, 56)
+}
+
+.nav-links {
+    display: flex; /*horizontal*/
+    list-style: none; /*removing the dots for the unordered lists*/
+    width: 50%;
+    height: 100%;
+    justify-content: space-around; /*evenly distribute horizontally*/
+    align-items: center; /*evemly distribute vertically*/
+    margin-left: auto; /*align to left*/
+}
+
+.nav-links li a {
+    color: white;
+    text-decoration: none;
+}
