--- a/style.css
+++ b/style.css
@@ -60,3 +60,33 @@ nav{
     color: white;
     text-decoration: none;
 }
+
+@media screen and (max-width: 784px){
+    .line {
+        width: 30px;
+        height: 3px;
+        background: white;
+        margin: 5px;
+    }
+
+    nav {
+        position: relative;
+    }
+
+    .hamburger {
+        position: absolute;
+        cursor: pointer;
+        right: 5%;
+        top: 50%;
+        transform: translate(-5%, -50%);
+    }
+
+    .nav-links {
+        position: fixed;
+        background:rgb(80, 102, 56);
+        height: 100vh;
+        width: 100%;
+        flex-direction: column;
+        display: none;  
+    }
+}
