--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ nav{
         right: 5%;
         top: 50%;
         transform: translate(-5%, -50%);
+        z-index: 2;
     }
 
     .nav-links {
@@ -87,6 +88,15 @@ nav{
         height: 100vh;
         width: 100%;
         flex-direction: column;
-        display: none;  
+        clip-path: circle(100px at 90% -10%);
+        -webkit-clip-path: circle(100px at 90% -10%);
+        transition: all 1s ease-in;
+        pointer-events: none;
     }
+    .nav-links.open{
+        clip-path: circle(1200px at 90% -10%);
+        -webkit-cli-path: circle(1200px at 90% -10%);
+        pointer-events: all;
+    }
+
 }
