--- a/style.css
+++ b/style.css
@@ -4,46 +4,23 @@
     box-sizing: border-box;
 }
 body {
-    background-color: rgb(213, 248, 168);
-    color: rgb(80, 102, 56);
+    background-image: url("window.jpg");
+    background-size: cover;
+    color:rgb(253, 252, 252);
+    background-position: center;
     font-family: "Jost", monospace;
     min-height: 100vh;
 }
 header {
     font-size: 3.5rem;
-}
-header {
-    min-height: 20vh;
+    text-shadow: 2px 2px 5px grey;
+    min-height: 75vh;
     display:flex;
     justify-content: center;
     align-items: center;
-}
-form{
-    min-height: 10vh;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-form input, form button {
-    padding: 0.5rem;
-    font-size: 2rem;
-    border: none;
-    background: white;
-}
-form button{
-    color: rgb(80, 102, 56);
-    background: white;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-form button:hover{
-    background:rgb(80, 102, 56);
-    color:white;
-
 }
 nav{
     height: 8vh;
-    background:rgb(80, 102, 56)
 }
 
 .nav-links {
@@ -54,6 +31,7 @@ nav{
     justify-content: space-around; /*evenly distribute horizontally*/
     align-items: center; /*evemly distribute vertically*/
     margin-left: auto; /*align to left*/
+    margin-right: auto;
 }
 
 .nav-links li a {
@@ -62,8 +40,9 @@ nav{
 }
 
 .nav-links li a:hover {
-    color:rgb(213, 248, 168);
+    color:rgb(165, 78, 19);
 }
+
 @media screen and (max-width: 784px){
     .line {
         width: 30px;
@@ -87,7 +66,7 @@ nav{
 
     .nav-links {
         position: fixed;
-        background:rgb(80, 102, 56);
+        background:black;
         height: 100vh;
         width: 100%;
         flex-direction: column;
@@ -100,6 +79,10 @@ nav{
         clip-path: circle(1200px at 90% -10%);
         -webkit-cli-path: circle(1200px at 90% -10%);
         pointer-events: all;
+    }
+
+    header {
+        font-size: 2.5rem;
     }
 
 }
