--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
     box-sizing: border-box;
 }
 body {
-    background-image: URL(https://github.com/1yimeng/1yimeng.github.io/blob/master/window.JPG);
-    background-size: cover;
+    background: #654ea3;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #eaafc8, #654ea3);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #eaafc8, #654ea3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /*background-image: URL(https://github.com/1yimeng/1yimeng.github.io/blob/master/window.JPG);
+    background-size: cover; */
     color:rgb(253, 252, 252);
     background-position: center;
     font-family: "Jost", monospace;
@@ -66,12 +69,12 @@ nav{
 
     .nav-links {
         position: fixed;
-        background:black;
+        background: #654ea3;
         height: 100vh;
         width: 100%;
         flex-direction: column;
         clip-path: circle(100px at 90% -10%);
-        -webkit-clip-path: circle(100px at 90% -10%);
+        -webkit-clip-path: circle(100px at 90% -20%);
         transition: all 1s ease-in;
         pointer-events: none;
     }
