--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav{
     color:rgb(165, 78, 19);
 }
 
-@media screen and (min-width: 1000px){
+@media only screen and (max-device-width: 800px){
     .line {
         width: 30px;
         height: 3px;
