--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     justify-content: center;
     align-items: flex-end;
     text-align: center;
-    color: black;
+    color: rgb(37, 37, 37);
     position: fixed;
     left: 100px;
     /* background-color: gray; */
@@ -44,12 +44,12 @@ nav{
 }
 
 .nav-links li a {
-    color:black;
+    color:rgb(37, 37, 37);
     text-decoration: none;
 }
 
 .nav-links li a:hover {
-    color:rgb(178, 247, 237);
+    color:rgb(88, 88, 88);
 }
 
 @media screen and (max-width: 700px){
@@ -94,4 +94,12 @@ nav{
         font-size: 2.5rem;
     }
 
+    .titlepage {
+        font-size: 2rem;
+        min-height: 70vh;
+        width: 50%;
+        color: rgb(37, 37, 37);
+        display: flex;
+        align-items: center;
+    }
 }
