--- a/style.css
+++ b/style.css
@@ -9,28 +9,30 @@ body {
     background-position: center;
     font-family: "Jost", monospace;
     min-height: 100vh;
-    background: url("img/shadow.jpeg") no-repeat center center fixed;
     background-size: cover;
 }
 .titlepage {
     font-size: 2.5rem;
-    min-height: 75vh;
-    width: 30%;
+    min-height: 67vh;
+    width: 95%;
     display:flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    text-align: right;
-    color: rgb(37, 37, 37);
-    position: fixed;
-    left: 100px;
+    justify-content:center;
+    text-align:left;
+    color: #050002;
+    position: absolute;
+    left: 47%;
 }
 
+.head {
+    left: 20%;
+}
 nav{
-    height: 8vh;
-    /* background-color:white; */
+    height: 13vh;
+    background-color:white;
     position: sticky;
     top: 0;
+    z-index: 12;
 }
 
 .nav-links {
@@ -53,6 +55,68 @@ nav{
     color:rgb(88, 88, 88);
 }
 
+.container {
+    position: relative;
+}
+
+.back-block {
+    background-color: #e6a386;
+    height: 95vh;
+    width: 40%;
+    position: absolute;
+}
+
+.top-block {
+    background-color:#EDC7B7;
+    position: absolute;
+    z-index: 10;
+    height: 50vh;
+    width: 40vh;
+    left: 27%;
+    top: 150px;
+    box-shadow: 5px 8px #d3cccf;
+}
+
+#yimengphoto {
+    width: 200px;
+    height: auto;
+    position: relative;
+    top: 10%;
+    left: 20%;
+}
+
+.name, .dash {
+    font-size: 2rem;
+    position: relative;
+    top: 16%;
+    left: 20%;
+    color: rgb(7, 0, 0);
+}
+
+.dash {
+    color: #7a7a7a;
+}
+
+.student {
+    font-size: 1.3rem; 
+    position: relative;
+    top: 18%;
+    left: 12%;
+    color: rgb(2, 0, 0);
+}
+
+.bottom {
+    position: relative;
+    height: 10vh;
+    top: 825px;
+    color: black;
+}
+
+.copyright {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
 @media screen and (max-width: 900px){
     .line {
         width: 30px;
