--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     text-align:left;
     color: #050002;
     position: absolute;
-    left: 47%;
+    left: 900px;
 }
 
 .head {
@@ -64,6 +64,7 @@ nav{
     height: 95vh;
     width: 40%;
     position: absolute;
+    z-index: 2;
 }
 
 .top-block {
@@ -85,24 +86,20 @@ nav{
     left: 20%;
 }
 
-.name, .dash {
-    font-size: 2rem;
+.name, .dash, .student {
+    font-size: 1.5rem;
     position: relative;
-    top: 16%;
-    left: 20%;
+    display: flex;
+    top: 14%;
+    justify-content: center;
     color: rgb(7, 0, 0);
 }
 
+.name {
+    font-size: 2rem;
+}
 .dash {
     color: #7a7a7a;
-}
-
-.student {
-    font-size: 1.3rem; 
-    position: relative;
-    top: 18%;
-    left: 12%;
-    color: rgb(2, 0, 0);
 }
 
 .bottom {
