--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ body {
 .titlepage {
     font-size: 2.5rem;
     min-height: 67vh;
-    width: 95%;
-    display:flex;
+    width: 40vh;
+    display: flex;
     flex-direction: column;
-    justify-content:center;
-    text-align:left;
+    justify-content: center;
+    text-align: left;
     color: #050002;
     position: absolute;
-    left: 900px;
+    left: 60%;
 }
 
 .head {
@@ -87,7 +87,7 @@ nav{
 }
 
 .name, .dash, .student {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     position: relative;
     display: flex;
     top: 14%;
@@ -114,7 +114,19 @@ nav{
     bottom: 0;
     left: 0;
 }
-@media screen and (max-width: 900px){
+
+@media screen and (max-width:1100px) {
+    .titlepage {
+        font-size: 2rem;
+        min-height: 70vh;
+        width: 50%;
+        color: rgb(37, 37, 37);
+        display: flex;
+        align-items: center;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 850px){
     .line {
         width: 30px;
         height: 3px;
@@ -158,12 +170,6 @@ nav{
     }
 
     .titlepage {
-        font-size: 2rem;
-        min-height: 70vh;
-        width: 50%;
-        color: rgb(37, 37, 37);
-        display: flex;
-        align-items: center;
-        text-align: center;
+        display: none;
     }
 }
