--- a/style.css
+++ b/style.css
@@ -79,15 +79,16 @@ nav{
 }
 
 #yimengphoto {
-    width: 200px;
-    height: auto;
+    width: 60%;
     position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     top: 10%;
-    left: 20%;
 }
 
 .name, .dash, .student {
-    font-size: 1.25rem;
+    font-size: 130%;
     position: relative;
     display: flex;
     top: 14%;
@@ -115,7 +116,7 @@ nav{
     left: 0;
 }
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1200px) {
     .titlepage {
         font-size: 2rem;
         min-height: 70vh;
@@ -126,6 +127,7 @@ nav{
         text-align: center;
     }
 }
+
 @media screen and (max-width: 850px){
     .line {
         width: 30px;
@@ -141,7 +143,7 @@ nav{
     .hamburger {
         position: absolute;
         cursor: pointer;
-        right: 5%;
+        right: 3%;
         top: 50%;
         transform: translate(-5%, -50%);
         z-index: 2;
