--- a/style.css
+++ b/style.css
@@ -2,15 +2,45 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
+
+section {
+    height: 89vh;
+    scroll-snap-align: start;
+}
+
+.overall {
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    height: 89vh;
+}
+
+.resume {
+    background-color: #e6dc86;
+}
+
+.project {
+    background-color: #8688e6;
+}
+
+.contact {
+    height: 35vh;
+    top: 800px;
+    color: black;
+    background-color: #bce686;
+}
+
+
 body {
     /* background: white;   */
-    color:rgb(253, 252, 252);
+    color:rgba(253, 252, 252, 0.89);
     background-position: center;
     font-family: "Jost", monospace;
     min-height: 100vh;
     background-size: cover;
 }
+
 .titlepage {
     font-size: 2.5rem;
     min-height: 67vh;
@@ -47,7 +77,7 @@ body {
 }
 
 nav{
-    height: 13vh;
+    height: 11vh;
     background-color:white;
     position: sticky;
     top: 0;
@@ -80,7 +110,7 @@ nav{
 
 .back-block {
     background-color: #e6a386;
-    height: 95vh;
+    height: 89vh;
     width: 40%;
     position: absolute;
     z-index: 2;
@@ -142,21 +172,12 @@ i {
 i:hover {
     color: cadetblue;
 }
-.bottom {
-    position: relative;
-    height: 10vh;
-    top: 823.5px;
-    color: black;
-    background-color:#91604c;
-}
 
 .copyright {
     font-family: 'Noto Sans', sans-serif;
-    position: absolute;
-    align-self: auto;
-    justify-content: center;
-    top: 50%;
-    left: 40%;
+    position: relative;
+    top: 10%;
+    left: 45%;
 }
 
 @media screen and (max-width:1500px) {
