--- a/style.css
+++ b/style.css
@@ -283,8 +283,37 @@ i:not(#folder):hover {
         left: 68%;
         text-align: center;
     }
-}
 
+    span {
+        height: 33%;
+    }
+
+    .student {
+        font-size: 120%;
+    }
+
+    .card {
+        width: 300px;
+        height: 260px;
+    }
+
+    .col {
+        grid-template-columns: 330px 330px 330px;
+        grid-template-rows: 340px 240px;
+    }
+    
+    .technology {
+        top:20%;
+    }
+    
+    .pdescription, .project-title {
+        top:10%;
+    }
+
+    #folder {
+        top:8%;
+    }
+}
 @media screen and (max-width: 950px){
     .line {
         width: 30px;
