--- a/style.css
+++ b/style.css
@@ -293,8 +293,8 @@ i:not(#folder):hover {
     }
 
     .card {
-        width: 300px;
-        height: 260px;
+        width: 21vw;
+        height: 40vh;
     }
 
     .col {
