--- a/style.css
+++ b/style.css
@@ -205,8 +205,8 @@ i:not(#folder):hover {
 }
 
 .card {
-    width: 300px;
-    height: 320px;
+    width: 21vw;
+    height: 40vh;
     display: inline-block;
     border-radius: 3px;
     padding: 15px 25px;
